# ExamFlow

./: README.md  sample_questions.xlsx
backend/: .env  .gitignore  main.py  pyproject.toml
backend/app/: app.py  config.py  db.py  dependencies.py  security.py
backend/app/models/: exam_model.py  exam_session_model.py  question_model.py  user_model.py
backend/app/routers/: auth.py  exam_routers.py  question_bank.py  result_routers.py  student_routers.py
backend/app/schemas/: exam_schema.py  exam_session_schema.py  question_schema.py  user_schema.py
backend/app/services/: exam_service.py  excel_service.py  grading_service.py  session_service.py
backend/app/tests/: test_excel_parser.py
backend/tests/: test_excel_parser.py  test_grading_service.py
frontend/: App.tsx  global.d.ts  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
frontend/components/: Navbar.tsx  NotificationToast.tsx
frontend/context/: AuthContext.tsx  NotificationContext.tsx
frontend/pages/: AdminResults.tsx  ExamManager.tsx  ExamRunner.tsx  Login.tsx  QuestionBank.tsx  Register.tsx  ResultDetails.tsx  Results.tsx  StudentDashboard.tsx
frontend/services/: api.ts  mockData.ts
