[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "fastapi[standard]>=0.121.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "pytest>=9.0.1",
    "sqlalchemy>=2.0.44",
]
